@@ -3540,6 +3540,18 @@ e_week_view_on_editing_stopped (EWeekView *week_view,
 
  out:
 
+	if (event) {
+		if (event->tooltip) {
+			gtk_widget_destroy (event->tooltip);
+			event->tooltip = NULL;
+		}
+
+		if (event->timeout != -1) {
+			g_source_remove (event->timeout);
+			event->timeout = -1;
+		}
+	}	
+
 	g_free (text);
 	g_object_unref (comp);
 
